<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="select_region">选择国家／地区</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pass">请输入密码</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="input_invite_code">请输入邀请码</string>
    <string name="forgot_pass">忘记密码？</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="msg_login">短信登录</string>
    <string name="str_input_old">请输入旧密码</string>
    <string name="str_input_new">请输入新密码</string>
    <string name="str_input_repeat">请再次输入新密码</string>
    <string name="str_pass_format_failed">密码要求6-12位数（数字/英文大小写/符号混合）格式</string>
    <string name="str_cannot_eques_old">新密码不能与旧密码相同</string>
    <string name="str_new_verify_failed">新密码两次输入不相同</string>
    <string name="str_edit_pass">修改密码</string>
    <string name="str_confirm">确认</string>
    <string name="str_invite">推荐码</string>
    <string name="str_mine">个人中心</string>
    <string name="str_setting">设置</string>
    <string name="str_msg">消息中心</string>
    <string name="str_version">版本号</string>
    <string name="str_msg_detail">资讯详情</string>
    <string name="str_copied">复制成功</string>
    <string name="str_get_data_failed">获取数据失败</string>
    <string name="str_phone_format_failed">输入手机格式不正确</string>
    <string name="login_pass_failed">账号或者密码错误，请重新输入</string>
    <string name="login_code_failed">验证码有误，请重新输入</string>
    <string name="comming_soon">敬请期待</string>
    <string name="notice">通知</string>
    <string name="save_img">保存图片</string>
    <string name="copy_url">复制链接</string>
    <string name="toast_login">请先登录后再操作</string>
    <string name="registed">账号已经注册了</string>
    <string name="failed">操作失败</string>
    <string name="none_account">账号不存在</string>
    <string name="loading">加载中</string>
    <string name="register_success">账号注册成功请登录</string>
    <string name="verify_failed">验证码失效</string>
    <string name="invite_error">错误的邀请码</string>
    <string name="update_pass_sucess">密码修改成功</string>
    <string name="update_pass_failed_old">旧密码错误</string>
    <string name="update_pass_failed">密码修改失败</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="login_failed_pass">密码错误</string>
    <string name="new_version">新版本更新</string>
    <string name="str_cancel">取消</string>
    <string name="logouted">登录失效，请重新登录</string>

    <string name="forgot_update_pwd">点击忘记密码去修改</string>
    <string name="download">下载</string>
    <string name="created_at">更新</string>
    <string name="msg_deleted">消息已被删除</string>
    <string name="logout">退出登录</string>
    <string name="internet_failed">网络连接失败</string>
    <string name="str_miner_running">正在挖矿</string>
    <string name="str_apply">申请</string>
    <string name="str_permission">需要获取文件存储权限才能查看</string>
    <string name="str_wait">敬请期待</string>
    <string name="str_node_l">您当前为三级节点</string>
    <string name="str_email">官方邮箱：</string>
    <string name="str_website">官方网站：</string>
    <string name="str_restart">重启APP</string>
    <string name="str_success">成功</string>
    <string name="str_no_up">暂无更新</string>

    <string name="title_guanui_text_1">版权所有©</string>
    <string name="title_guanui_text_2">xxx科技有限责任公司 </string>
    <string name="title_guanui_text_3">ICP备案：冀ICP备20008xxx号-1</string>
</resources>